Use new collection factory methods like List.of and Set.of
[#168714093]