@@ -34,14 +34,11 @@ public enum UaaAuthority implements GrantedAuthority {
 
     UAA_INVITED("uaa.invited", 1), UAA_ADMIN("uaa.admin", 1), UAA_USER("uaa.user", 0), UAA_NONE("uaa.none", -1);
 
-    public static final List<UaaAuthority> ADMIN_AUTHORITIES = Collections.unmodifiableList(Arrays.asList(UAA_ADMIN,
-                    UAA_USER));
+    public static final List<UaaAuthority> ADMIN_AUTHORITIES = List.of(UAA_ADMIN, UAA_USER);
 
-    public static final List<UaaAuthority> USER_AUTHORITIES = Collections.unmodifiableList(Collections.singletonList(
-            UAA_USER));
+    public static final List<UaaAuthority> USER_AUTHORITIES = List.of(UAA_USER);
 
-    public static final List<UaaAuthority> NONE_AUTHORITIES = Collections.unmodifiableList(Collections.singletonList(
-            UAA_NONE));
+    public static final List<UaaAuthority> NONE_AUTHORITIES = List.of(UAA_NONE);
 
     private final int value;
 
